--- a/Oma/style.css
+++ b/Oma/style.css
@@ -90,6 +90,9 @@ article{
     color: var(--colorC);
     padding: 0.2em 2em;
 }
+.article-text{
+    margin-bottom:1rem ;
+}
 
 .article-img__wrapper{
     width: 100%;
@@ -99,8 +102,7 @@ hr{
     background-color: var(--colorC);
 }
 address{
-    padding: 2em;
-    padding-bottom: 0;
+    padding: 0.5em 2em;
     color: black;
 }
 .contact-icons{
@@ -162,7 +164,7 @@ footer{
       
         background-color: azure;
     }
-    .black{
+    .black-lg{
         display: flex;
         flex-direction: column;
         align-items: center;
