--- a/FootWears/style.css
+++ b/FootWears/style.css
@@ -16,16 +16,19 @@ body{
     margin: 0;
     padding: 0.8em 0;
     list-style: none;
-    background-color: white;
+    background-color: azure;
+    border-bottom: 1px solid rgb(0, 0, 0) ;
 }
 .nav--item{
     font-weight:700;
     color: black;
 }
 
-.header--img,.article--img{
+
+.header--img{
     width: 100%;
-    object-fit: contain;
+    height: 350px;
+    object-fit: cover;
 }
 main{
     text-align: center;
@@ -45,7 +48,7 @@ article{
     display: flex;
     margin: 1rem auto;
     justify-content: space-between;
-    background-color: blue;
+    background-color: blanchedalmond;
 }
 .showlist--item img{
     width: 70%;
@@ -65,10 +68,6 @@ article{
     border:2px solid pink;
 }
 
-
-hr{
-    background-color: var(--colorC);
-}
 address{
     padding: 0.5em 2em;
     color: black;
@@ -89,6 +88,7 @@ footer{
     position: fixed;
     animation: blip infinite 5s ease;
 }
+
 @media (min-width:567px) {
     .showlist{
         display: grid;
@@ -97,6 +97,15 @@ footer{
     }
     .showlist--item{
         background-color: blanchedalmond;
+    }
+    header{
+        background-color: white;
+    }
+    .header--img{
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+        border-bottom: 1px solid black;
     }
     
 }
