--- a/clothes/style.css
+++ b/clothes/style.css
@@ -40,7 +40,6 @@ h1{
 .showlist--1,.showlist--2{
     display: flex;
     flex-direction: column;
- 
 }
 
 .showlist--item{
@@ -114,4 +113,20 @@ footer{
     100%{
         transform:scale(1) 
     }
+}
+@media (min-width:567px) {
+    .header--img{
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+       
+    }
+    .article--img__wrapper{
+        border: none;
+    }
+   .showlist--1,.showlist--2{
+    display: grid;
+   grid-template-columns: 1fr 1fr;
+}
+
 }
