--- a/clothes/style.css
+++ b/clothes/style.css
@@ -26,7 +26,6 @@ h1{
 
 .header--img,.article--img{
     width: 100%;
-    height: 350px;
     object-fit: cover;
 }
 
@@ -145,5 +144,9 @@ footer{
         width: 60;
         height: 60;
         margin-left: 90%;
+    }
+    .header--img{
+        height: 350px;
+        object-fit: contain;
     }
 }
